# rhasspy3

./: .gitignore  .gitmodules  README.md  mypy.ini  requirements.txt  requirements_dev.txt  requirements_http_api.txt  requirements_wyoming_api.txt  setup.cfg  setup.py  wyoming_setup.py
config/: configuration.default.yaml  configuration.yaml
docs/: README.md  adapters.md  domains.md  home_assistant.md  satellite.md  tutorial.md  whisper_home_assistant.md  wyoming.md
examples/phone/: Dockerfile  Dockerfile.dockerignore  build-docker  configuration.yaml  run-docker  run.sh  sip.py
examples/satellite/: configuration.yaml
programs/intent/: regex.py
programs/mic_filter/speexdsp-cli/src/: CMakeLists.txt  main.cpp
rhasspy3/: asr.py  audio.py  config.py  configuration.yaml  core.py  event.py  handle.py  intent.py  mic.py  pipeline.py  program.py  remote.py  snd.py  tts.py  util.py  vad.py  wake.py
rhasspy3/util/: __init__.py  dataclasses_json.py  jaml.py
rhasspy3_http_api/: __main__.py  asr.py  handle.py  intent.py  pipeline.py  snd.py  swagger.yaml  tts.py  wake.py
rhasspy3_http_api/css/: main.css
rhasspy3_http_api/js/: main.js  recorder.worklet.js
rhasspy3_wyoming_api/: __main__.py  handler.py  process.py
script/: format  http_server  install_program  lint  package_wyoming  run  setup  setup_http_server  setup_wyoming_server  test  wyoming_server
tests/: test_dataclasses_json.py  test_jaml.py  test_wyoming.py
wyoming/: __init__.py  asr.py  audio.py  client.py  event.py  info.py  intent.py  server.py  snd.py  tts.py  vad.py  wake.py
(+186 files in other folders)
